Atualizações do novo portfólio

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./src/styles/styles.css">
-
     <link rel="stylesheet" href="./src/styles/header.css">
+    <link rel="stylesheet" href="./src/styles/home.css">
+    <link rel="stylesheet" href="./src/styles/menu.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -19,7 +20,7 @@
     <!-- Cabeçalho da página (barra de navegação) -->
      
         <nav id="navbar">
-            <i class="fa-solid fa-laptop-code" id="nav_logo">notebook</i>
+            <i class="fa-solid fa-laptop-code" id="nav_logo"> Notebook</i>
 
             <ul id="nav_list">
                 <li class="nav_item active">
@@ -65,6 +66,187 @@
         </div>
 
     </header>
+
+    <main id="content">
+        <section id="home">
+            <div class="shape"></div>
+            <div id="cta">
+                <h1 class="title">
+                    O sabor vai até
+                    <span>você!</span>
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque assumenda vero qui, laboriosam quaerat est incidunt, facilis omnis sapiente asperiores provident adipisci excepturi ducimus, quia doloremque magnam hic molestiae nostrum!
+                </p>
+                <div id="cta_buttons">
+                    <a href="" class="btn-default">
+                        Ver cardápio
+                    </a>
+
+                    <a href="tel:+555555555" id="phone_button">
+                        <button class="btn-default">
+                            <i class="fa-solid fa-phone"></i>
+                        </button> 
+                        (61) 99813-0286               
+                    </a>
+                </div>
+
+                <div class="social-media-buttons">
+                    <a href="">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
+
+            </div>
+            <div id="banner">
+                <img src="src/Images/hero.png" alt="">
+
+            </div>
+        </section>
+
+        <section id="menu">
+            <h2 class="section-title">Cardápio</h2>
+            <h3 class="section-subtitle">Nossos pratos especiais</h3>
+
+            <div id="dishes">
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/Images/dish1.png.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        LOREM Lorem
+                    </h3>
+
+                    <span class="dish-description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 20,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/Images/dish2.png.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        LOREM Lorem
+                    </h3>
+
+                    <span class="dish-description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 20,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/Images/dish3.png.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        LOREM Lorem
+                    </h3>
+
+                    <span class="dish-description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 20,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/Images/dish4.png.png" class="dish-heart" alt="">
+
+                    <h3 class="dish-title">
+                        LOREM Lorem
+                    </h3>
+
+                    <span class="dish-description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$ 20,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+    </main>
     
     <script src="src/javascript/script.js"></script>
 </body>
