Atualizações do portfólio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-    <!-- Cabeçalho da página (barra de navegação) -->
+   <!-- CABEÇAÇHO/ BARRA DE NAVEGAÇÃO -->
      
         <nav id="navbar">
             <i class="fa-solid fa-laptop-code" id="nav_logo"> Notebook</i>
@@ -120,14 +120,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish1.png.png" class="dish-heart" alt="">
+                    <img src="src/Images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         LOREM Lorem
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                        Lorem ipsum, dolor sit amet adipisicing elit. 
                     </span>
 
                     <div class="dish-rate">
@@ -152,14 +152,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish2.png.png" class="dish-heart" alt="">
+                    <img src="src/Images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         LOREM Lorem
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                        Lorem ipsum, dolor sit amet adipisicing elit.                     
                     </span>
 
                     <div class="dish-rate">
@@ -184,14 +184,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish3.png.png" class="dish-heart" alt="">
+                    <img src="src/Images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         LOREM Lorem
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                        Lorem ipsum, dolor sit amet adipisicing elit.                     
                     </span>
 
                     <div class="dish-rate">
@@ -216,14 +216,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish4.png.png" class="dish-heart" alt="">
+                    <img src="src/Images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         LOREM Lorem
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem quos ducimus dolorum excepturi aliquam similique voluptates expedita adipisci. Porro accusantium eum veritatis blanditiis hic iure maiores quae doloremque impedit laudantium!
+                        Lorem ipsum, dolor sit amet adipisicing elit.                     
                     </span>
 
                     <div class="dish-rate">
