Atualizações nos textos

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
             <div class="shape"></div>
             <div id="cta">
                 <h1 class="title">
-                    O sabor vai até
+                    O sabor que vai até
                     <span>você!</span>
                 </h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque assumenda vero qui, laboriosam quaerat est incidunt, facilis omnis sapiente asperiores provident adipisci excepturi ducimus, quia doloremque magnam hic molestiae nostrum!
+                    Dizemos sempre para nossos clientes que toda mulher conquista o homem pela barriga, mas o contrário também é verdade! Então por que não encomendar com a gente o seu pedido hoje e "fazer a boa" para sua esposa campeão?
                 </p>
                 <div id="cta_buttons">
                     <a href="" class="btn-default">
