--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./src/styles/header.css">
     <link rel="stylesheet" href="./src/styles/home.css">
     <link rel="stylesheet" href="./src/styles/menu.css">
+    <link rel="stylesheet" href="./src/styles/testimonials.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -76,7 +77,7 @@
                     <span>você!</span>
                 </h1>
                 <p>
-                    Dizemos sempre para nossos clientes que toda mulher conquista o homem pela barriga, mas o contrário também é verdade! Então por que não encomendar com a gente o seu pedido hoje e "fazer a boa" para sua esposa campeão?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem vel tempore labore, dicta quasi at dolore fugit, commodi architecto repellat, quam distinctio eum. Aliquam sed optio voluptatum magni ea distinctio?
                 </p>
                 <div id="cta_buttons">
                     <a href="" class="btn-default">
@@ -142,7 +143,7 @@
                     <div class="dish-price">
                         <h4>R$ 20,00</h4>
                         <button class="btn-default">
-                            <i class="fa-solid fa-basket-shopping"></i>
+                           Ver mais
                         </button>
                     </div>
                 </div>
@@ -246,6 +247,78 @@
             </div>
         </section>
 
+        <section id="testimonials">
+            <img src="src/Images/chef.png" id="testimonials_chef"  alt="">
+
+            <div id="testimonials_content">
+
+                <h2 class="section-title">
+                    Depoimentos
+                </h2>
+
+                <h3 class="section-subtitle">
+                    O que os clientes falam sobre nós
+                </h3>
+
+                <div id="feedbacks">
+                        <div class="feedback">
+                            <img src="src/Images/avatar.png"  class="feed-avatar" alt="">
+                            <div class="feedback-content">
+                                <p>Fulana de tal
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                </p>
+                                <p>
+                                    'Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, error libero? Non natus, fugiat sequi, veritatis dicta necessitatibus, nemo minus ullam asperiores eligendi officiis voluptates. Error enim doloribus reiciendis quia.''
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="feedback">
+                            <img src="src/Images/avatar.png"  class="feed-avatar" alt="">
+                            <div class="feedback-content">
+                                <p>Fulana de tal
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                </p>
+                                <p>
+                                    'Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, error libero? Non natus, fugiat sequi, veritatis dicta necessitatibus, nemo minus ullam asperiores eligendi officiis voluptates. Error enim doloribus reiciendis quia.''
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="feedback">
+                            <img src="src/Images/avatar.png"  class="feed-avatar" alt="">
+                            <div class="feedback-content">
+                                <p>Fulana de tal
+                                    <span>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </span>
+                                </p>
+                                <p>
+                                    'Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, error libero? Non natus, fugiat sequi, veritatis dicta necessitatibus, nemo minus ullam asperiores eligendi officiis voluptates. Error enim doloribus reiciendis quia.''
+                                </p>
+                            </div>
+                        </div>
+                </div>
+
+                <button class="btn-default">
+                    Ver mais avaliações
+                </button>
+
+            </div>
+        </section>
     </main>
     
     <script src="src/javascript/script.js"></script>
