--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="./src/styles/styles.css">
-    <link rel="stylesheet" href="./src/styles/header.css">
-    <link rel="stylesheet" href="./src/styles/home.css">
-    <link rel="stylesheet" href="./src/styles/menu.css">
-    <link rel="stylesheet" href="./src/styles/testimonials.css">
+   
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -69,7 +66,7 @@
     </header>
 
     <main id="content">
-        <section id="home">
+        <section id="home"><!--SEÇÃO DE APRESENTAÇÃO-->
             <div class="shape"></div>
             <div id="cta">
                 <h1 class="title">
@@ -111,7 +108,7 @@
             </div>
         </section>
 
-        <section id="menu">
+        <section id="menu"><!--SEÇÃO DO CARDÁPIO-->
             <h2 class="section-title">Cardápio</h2>
             <h3 class="section-subtitle">Nossos pratos especiais</h3>
 
@@ -247,7 +244,7 @@
             </div>
         </section>
 
-        <section id="testimonials">
+        <section id="testimonials"><!--SEÇÃO DAS AVALIAÇÕES-->
             <img src="src/Images/chef.png" id="testimonials_chef"  alt="">
 
             <div id="testimonials_content">
@@ -321,6 +318,29 @@
         </section>
     </main>
     
+    <footer>
+        <img src="src/Images/wave.svg" alt="">
+        <div id="fotter_items">
+
+            <span id="copyright">
+                &copy 2024 João João
+            </span>
+
+            <div class="social-media-buttons">
+                <a href="">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </div>
+
+        </div>
+    </footer>
+
     <script src="src/javascript/script.js"></script>
 </body>
 </html>
