Atualizações do projeto

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    <header>
-   <!-- CABEÇAÇHO/ BARRA DE NAVEGAÇÃO -->
+    <header><!-- CABEÇAÇHO/ BARRA DE NAVEGAÇÃO -->
      
         <nav id="navbar">
             <i class="fa-solid fa-laptop-code" id="nav_logo"> Notebook</i>
@@ -318,9 +317,9 @@
         </section>
     </main>
     
-    <footer>
-        <img src="src/Images/wave.svg" alt="">
-        <div id="fotter_items">
+    <footer> <!--RODAPÉ DA PÁGINA-->
+        <img src="src/Images/wave (1).svg" alt="">
+        <div id="footer_items">
 
             <span id="copyright">
                 &copy 2024 João João
