--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <link rel="stylesheet" href="./src/styles/styles.css">
-   
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="src/styles/styles.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <title>Landing João</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <title>Landing page</title>
 </head>
-
 <body>
-    <header><!-- CABEÇAÇHO/ BARRA DE NAVEGAÇÃO -->
-     
+    <header>
         <nav id="navbar">
-            <i class="fa-solid fa-laptop-code" id="nav_logo"> Notebook</i>
+            <i class="fa-solid fa-burger" id="nav_logo"> food</i>
 
             <ul id="nav_list">
-                <li class="nav_item active">
+                <li class="nav-item active">
                     <a href="#home">Início</a>
                 </li>
-
-                <li class="nav_item">
+                <li class="nav-item">
                     <a href="#menu">Cardápio</a>
                 </li>
-
-                <li class="nav_item">
+                <li class="nav-item">
                     <a href="#testimonials">Avaliações</a>
                 </li>
             </ul>
@@ -44,15 +38,13 @@
 
         <div id="mobile_menu">
             <ul id="mobile_nav_list">
-                <li class="nav_item">
+                <li class="nav-item">
                     <a href="#home">Início</a>
                 </li>
-
-                <li class="nav_item">
+                <li class="nav-item">
                     <a href="#menu">Cardápio</a>
                 </li>
-
-                <li class="nav_item">
+                <li class="nav-item">
                     <a href="#testimonials">Avaliações</a>
                 </li>
             </ul>
@@ -61,30 +53,32 @@
                 Peça aqui
             </button>
         </div>
-
     </header>
 
     <main id="content">
-        <section id="home"><!--SEÇÃO DE APRESENTAÇÃO-->
+        <section id="home">
             <div class="shape"></div>
             <div id="cta">
                 <h1 class="title">
                     O sabor que vai até
-                    <span>você!</span>
+                    <span>você</span>
                 </h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem vel tempore labore, dicta quasi at dolore fugit, commodi architecto repellat, quam distinctio eum. Aliquam sed optio voluptatum magni ea distinctio?
+
+                <p class="description">
+                    Lorem ipsum dolor sit amet, consectetur 
+                    adipiscing elit ut aliquam, purus sit amet
                 </p>
+
                 <div id="cta_buttons">
-                    <a href="" class="btn-default">
+                    <a href="#" class="btn-default">
                         Ver cardápio
                     </a>
 
-                    <a href="tel:+555555555" id="phone_button">
+                    <a href="tel:+55555555555" id="phone_button">
                         <button class="btn-default">
                             <i class="fa-solid fa-phone"></i>
-                        </button> 
-                        (61) 99813-0286               
+                        </button>
+                        (51) 92342-3243
                     </a>
                 </div>
 
@@ -92,22 +86,23 @@
                     <a href="">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
+
                     <a href="">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
+
                     <a href="">
-                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-facebook"></i>
                     </a>
                 </div>
-
             </div>
-            <div id="banner">
-                <img src="src/Images/hero.png" alt="">
 
+            <div id="banner">
+                <img src="src/images/hero.png" alt="">
             </div>
         </section>
 
-        <section id="menu"><!--SEÇÃO DO CARDÁPIO-->
+        <section id="menu">
             <h2 class="section-title">Cardápio</h2>
             <h3 class="section-subtitle">Nossos pratos especiais</h3>
 
@@ -117,14 +112,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish.png" class="dish-image" alt="">
+                    <img src="src/images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        LOREM Lorem
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet adipisicing elit. 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
@@ -137,39 +132,7 @@
                     </div>
 
                     <div class="dish-price">
-                        <h4>R$ 20,00</h4>
-                        <button class="btn-default">
-                           Ver mais
-                        </button>
-                    </div>
-                </div>
-
-                <div class="dish">
-                    <div class="dish-heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
-
-                    <img src="src/Images/dish.png" class="dish-image" alt="">
-
-                    <h3 class="dish-title">
-                        LOREM Lorem
-                    </h3>
-
-                    <span class="dish-description">
-                        Lorem ipsum, dolor sit amet adipisicing elit.                     
-                    </span>
-
-                    <div class="dish-rate">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <span>(500+)</span>
-                    </div>
-
-                    <div class="dish-price">
-                        <h4>R$ 20,00</h4>
+                        <h4>R$20,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
@@ -181,14 +144,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish.png" class="dish-image" alt="">
+                    <img src="src/images/dish2.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        LOREM Lorem
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet adipisicing elit.                     
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
@@ -201,7 +164,7 @@
                     </div>
 
                     <div class="dish-price">
-                        <h4>R$ 20,00</h4>
+                        <h4>R$20,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
@@ -213,14 +176,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/Images/dish.png" class="dish-image" alt="">
+                    <img src="src/images/dish3.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        LOREM Lorem
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum, dolor sit amet adipisicing elit.                     
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
@@ -233,113 +196,132 @@
                     </div>
 
                     <div class="dish-price">
-                        <h4>R$ 20,00</h4>
+                        <h4>R$20,00</h4>
                         <button class="btn-default">
                             <i class="fa-solid fa-basket-shopping"></i>
                         </button>
                     </div>
                 </div>
 
+                <div class="dish">
+                    <div class="dish-heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="src/images/dish4.png" class="dish-image" alt="">
+
+                    <h3 class="dish-title">
+                        Lorem Ipsum
+                    </h3>
+
+                    <span class="dish-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </span>
+
+                    <div class="dish-rate">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <span>(500+)</span>
+                    </div>
+
+                    <div class="dish-price">
+                        <h4>R$20,00</h4>
+                        <button class="btn-default">
+                            <i class="fa-solid fa-basket-shopping"></i>
+                        </button>
+                    </div>
+                </div>
             </div>
         </section>
 
-        <section id="testimonials"><!--SEÇÃO DAS AVALIAÇÕES-->
-            <img src="src/Images/chef.png" id="testimonials_chef"  alt="">
+        <section id="testimonials">
+            <img src="src/images/chef.png" id="testimonial_chef" alt="">
 
             <div id="testimonials_content">
-
                 <h2 class="section-title">
                     Depoimentos
                 </h2>
-
                 <h3 class="section-subtitle">
                     O que os clientes falam sobre nós
                 </h3>
 
                 <div id="feedbacks">
-                        <div class="feedback">
-                            <img src="src/Images/avatar.png"  class="feed-avatar" alt="">
-                            <div class="feedback-content">
-                                <p>Fulana de tal
-                                    <span>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                    </span>
-                                </p>
-                                <p>
-                                    'Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, error libero? Non natus, fugiat sequi, veritatis dicta necessitatibus, nemo minus ullam asperiores eligendi officiis voluptates. Error enim doloribus reiciendis quia.''
-                                </p>
-                            </div>
-                        </div>
+                    <div class="feedback">
+                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
 
-                        <div class="feedback">
-                            <img src="src/Images/avatar.png"  class="feed-avatar" alt="">
-                            <div class="feedback-content">
-                                <p>Fulana de tal
-                                    <span>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                    </span>
-                                </p>
-                                <p>
-                                    'Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, error libero? Non natus, fugiat sequi, veritatis dicta necessitatibus, nemo minus ullam asperiores eligendi officiis voluptates. Error enim doloribus reiciendis quia.''
-                                </p>
-                            </div>
+                        <div class="feedback-content">
+                            <p>
+                                Fulana de Tal
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p>
+                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                            </p>
                         </div>
+                    </div>
 
-                        <div class="feedback">
-                            <img src="src/Images/avatar.png"  class="feed-avatar" alt="">
-                            <div class="feedback-content">
-                                <p>Fulana de tal
-                                    <span>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                        <i class="fa-solid fa-star"></i>
-                                    </span>
-                                </p>
-                                <p>
-                                    'Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, error libero? Non natus, fugiat sequi, veritatis dicta necessitatibus, nemo minus ullam asperiores eligendi officiis voluptates. Error enim doloribus reiciendis quia.''
-                                </p>
-                            </div>
+                    <div class="feedback">
+                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+
+                        <div class="feedback-content">
+                            <p>
+                                Fulana de Tal
+                                <span>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </span>
+                            </p>
+                            <p>
+                                "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                Repellat voluptatibus cumque dolor ea est quae alias necessitatibus"
+                            </p>
                         </div>
+                    </div>
                 </div>
 
                 <button class="btn-default">
                     Ver mais avaliações
                 </button>
-
             </div>
         </section>
     </main>
-    
-    <footer> <!--RODAPÉ DA PÁGINA-->
-        <img src="src/Images/wave (1).svg" alt="">
-        <div id="footer_items">
 
+    <footer>
+        <img src="src/images/wave.svg" alt="">
+
+        <div id="footer_items">
             <span id="copyright">
-                &copy 2024 João João
+                &copy 2024 Larissa Kich
             </span>
 
             <div class="social-media-buttons">
                 <a href="">
                     <i class="fa-brands fa-whatsapp"></i>
                 </a>
+
                 <a href="">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
+
                 <a href="">
-                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
             </div>
-
         </div>
     </footer>
-
     <script src="src/javascript/script.js"></script>
 </body>
 </html>
