--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <title>Landing page</title>
+    <title>Landing Page Restaurante</title>
 </head>
 <body>
     <header>
         <nav id="navbar">
-            <i class="fa-solid fa-burger" id="nav_logo"> food</i>
+            <i class="fa-solid fa-burger" id="nav_logo"> goodfood</i>
 
             <ul id="nav_list">
                 <li class="nav-item active">
