--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
 
             <div id="banner">
-                <img src="images/hero.png" alt="">
+                <img src="src/images/hero.png" alt="">
             </div>
         </section>
 
