--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div id="cta">
                 <h1 class="title">
                     O sabor que vai até
-                    <span>você</span>
+                    <span>você!</span>
                 </h1>
 
                 <p class="description">
