--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </h1>
 
                 <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur 
+                    Lorem ipsum dolor sit admet, consectetur 
                     adipiscing elit ut aliquam, purus sit amet
                 </p>
 
