--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
 
             <div id="banner">
-                <img src="src/images/hero.png" alt="">
+                <img src="src/Images/hero.png" alt="">
             </div>
         </section>
 
@@ -113,7 +113,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish.png" class="dish-image" alt="">
+                    <img src="src/Images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         Lorem Ipsum
@@ -145,7 +145,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish2.png" class="dish-image" alt="">
+                    <img src="src/Images/dish2.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         Lorem Ipsum
@@ -177,7 +177,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish3.png" class="dish-image" alt="">
+                    <img src="src/Images/dish3.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         Lorem Ipsum
@@ -209,7 +209,7 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="src/images/dish4.png" class="dish-image" alt="">
+                    <img src="src/Images/dish4.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
                         Lorem Ipsum
@@ -239,7 +239,7 @@
         </section>
 
         <section id="testimonials">
-            <img src="src/images/chef.png" id="testimonial_chef" alt="">
+            <img src="src/Images/chef.png" id="testimonial_chef" alt="">
 
             <div id="testimonials_content">
                 <h2 class="section-title">
@@ -251,7 +251,7 @@
 
                 <div id="feedbacks">
                     <div class="feedback">
-                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+                        <img src="src/Images/avatar.png" class="feedback-avatar" alt="">
 
                         <div class="feedback-content">
                             <p>
@@ -272,7 +272,7 @@
                     </div>
 
                     <div class="feedback">
-                        <img src="src/images/avatar.png" class="feedback-avatar" alt="">
+                        <img src="src/Images/avatar.png" class="feedback-avatar" alt="">
 
                         <div class="feedback-content">
                             <p>
@@ -301,7 +301,7 @@
     </main>
 
     <footer>
-        <img src="src/images/wave.svg" alt="">
+        <img src="src/Images/wave.svg" alt="">
 
         <div id="footer_items">
             <span id="copyright">
